--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
     backdrop-filter: blur(5px);
     width: 100%;
     height: 100%;
+    z-index: 99999;
     background-color: rgba(0, 0, 0, 0.75)
 }
 
@@ -21,3 +22,25 @@
     left: 50%;
     margin: -125px 0 0 -125px;
 }
+
+.inputText{
+margin: 5px;
+}
+
+.divider {
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+}
+
+.divider::before, .divider::after {
+    flex: 1;
+    content: '';
+    padding: 1px;
+    opacity: 0.5;
+    background-color: black;
+    margin: 5px;
+}
+
+
+
