--- a/src/components/UserInfo/Userinfo.module.css
+++ b/src/components/UserInfo/Userinfo.module.css
@@ -3,10 +3,15 @@
 }
 
 .pagewrapper{
-    width: 100vw;
+    border: 2px solid black;
+    border-radius: 15px;
+    padding: 15px;
+    width: 100%;
+    margin: 0 15px 15px 15px;
 }
 
 .comments{
+    display: flex;
     padding: 15px;
 }
 
@@ -26,6 +31,16 @@
 }
 
 .avatar{
-    width: 150px;
+    width: 500px;
+}
 
+.infoblock{
+    margin-left: 5px;
+}
+
+.avatarPreview
+{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
 }
